Complete log-in routing - Add validators     Custom validators are a little confusing,     need to remember to pass { req } in the     custom function, as the array doesn't have it     declared
- Add error messaging, 'log-in to see messages', etc

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -19,6 +19,11 @@
             <button class="btn btn-primary" type="submit">Sign Up</button>
         </div>
     </form>
+    <% if (locals.errors) { %>
+        <% for (let x=0; x<errors.length; x++) { %>
+            <p><%=errors[x].msg%></p>
+        <% } %>
+    <% } %>
 
 
 <%- include('./partials/footer')  %>
