--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,46 @@
 <%- include('./partials/header')  %>
   <div>
     <h1><%= title %></h1>
+    <% if(locals.user) { %>
+      <a href="/membership">Upgrade</a>
+      <a href="/log-out">Log Out</a>
+    <% } else { %>
     <a href="/log-in">Log In</a>
     <a href="/sign-up">Sign Up</a>
+    <% } %> 
     <hr>
   </div>
-  <div class="content">
+  <div class="content container">
     <% if (locals.user) {%>
-      <h1>WELCOME BACK <%= user.username %></h1>
-      <a href="/log-out">LOG OUT</a>
+      <h3>Welcome back <%= user.f_name %>!</h3>
+      <p><%= locals.user.member ? '': 'Upgrade your membership to see message authors' %></p>
     <% } else { %>
-      <h1>please log in</h1>
+      <h3>Please log in</h3>
       <form action="/log-in" method="POST">
-        <label for="username">Username</label>
-        <input id="username" name="username" placeholder="username" type="text" />
-        <label for="password">Password</label>
-        <input id="password" name="password" type="password" />
-        <button>Log In</button>
+        <div class="form-group">
+          <label for="username"></label>
+          <input class="form-control" id="username" name="username" placeholder="Username" type="text" />
+          <label for="password"></label>
+          <input class="form-control" id="password" name="password" type="password" placeholder="Password"/>
+        </div>
+        <button class="button btn btn-primary" type="submit">Log In</button>
       </form>
     <%}%>
-
-    <% if (locals.messages) { %>
+    <hr>
+    <div class="container">
+      <% if (locals.user) {%>
+        <% if (locals.messages) { %>
       
-    <% } %>
+        <% } else { %>
+        <p><strong>No messages posted.</strong></p>
+        <% } %>
+      <% } else { %>  
+        <p><strong>Log in or sign up to see message board.</strong></p>
+      <%}%>
+      
+    </div>
+
+
   </div>
 
 
