--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,10 @@
     <% } else { %>
       <h3><%= subtitle %></h3>
       <form action="/log-in" method="POST">
-        <div class="form-group">
-          <label for="username"></label>
+        <div class="mb-3">
+          <label for="username" class="form-label"></label>
           <input class="form-control" id="username" name="username" placeholder="Username" type="text" />
-          <label for="password"></label>
+          <label for="password" class="form-label"></label>
           <input class="form-control" id="password" name="password" type="password" placeholder="Password"/>
         </div>
         <button class="button btn btn-primary" type="submit">Log In</button>
@@ -23,11 +23,16 @@
         
         <% if (locals.messages.length > 0) { %>
           <% for (let x=0; x< locals.messages.length; x++) { %>
-            <div class="card" style="max-width: 50rem; margin: 10px;">
-              <div class="card-body">
+            <div class="card " style="max-width: 50rem; margin: 10px;">
+              <div class="card-body d-flex-column">
                 <h5 class="card-title"><%= locals.messages[x].headline %></h5>
                 <p class="card-text"><%= locals.messages[x].message %></p>
-                <p class="card-text" style="text-align: center;"><strong><%= locals.user.is_member ? locals.messages[x].user: 'Anonymous' %></strong></p>
+                <p class="card-text" style="text-align: center;"><strong><%= locals.user.is_member ? locals.messages[x].user: 'Anonymous' %> - <%= new Date(messages[x].date).toDateString() %></strong></p>
+                <form action="/delete-message" method="GET" class="justify-self-center" style=<%= user.is_admin ? 'visibility:;' : 'visibility:hidden;' %>>
+                  <input type="hidden" name="message" value="<%= locals.messages[x].id%>">
+                  <button class="btn btn-primary ">Delete Message</button>
+                </form>
+                
               </div>
             </div>
           <% } %>
