--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,21 +1,21 @@
 <%- include('./partials/header')  %>
     <h3><%= title %></h3>
     <form action="" method="POST">
-        <div class="form-group">
-            <label for="username">Username: </label>
+        <div class="mb-3">
+            <label for="username" class="form-label">Username: </label>
             <input type="text" name="username" class="form-control">
-            <label for="f_name">First Name: </label>
+            <label for="f_name" class="form-label">First Name: </label>
             <input type="text" name="f_name" class="form-control">
-            <label for="l_name">Last Name: </label>
+            <label for="l_name" class="form-label">Last Name: </label>
             <input type="text" name="l_name" class="form-control">
         </div>
-        <div class="form-group">
-            <label for="password">Password: </label>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password: </label>
             <input type="password" name="password" class="form-control">
-            <label for="confirm-password">Re-type Password: </label>
+            <label for="confirm-password" class="form-label">Re-type Password: </label>
             <input type="password" name="confirm-password" class="form-control">
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <button class="btn btn-primary" type="submit">Sign Up</button>
         </div>
     </form>
